# django-api-profiler

./: .env  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: settings.py
profiler/: admin.py  conf.py  db_wrapper.py  middleware.py  models.py  tasks.py
profiler/management/commands/: compute_aggregations.py
profiler/migrations/: 0001_initial.py  0002_requestmetric_query_count_and_more.py  0003_requestmetric_exception_message_and_more.py  0004_requestmetric_is_slow.py  0005_requestmetric_ip_address_requestmetric_request_id_and_more.py  0006_requestmetric_has_n_plus_one_and_more.py  0007_endpointsummary.py
profiler/models/: __init__.py  endpoint_summary.py  request_metric.py
profiler/services/: __init__.py  analytics.py  n_plus_one.py  regression.py  request_metric.py
profiler/tests/: __init__.py  build_metric_payload.py  calculate_p95.py  n_plus_one.py
profiler/utils/: __init__.py  ingestion.py
