[project]
name = "django-api-profiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
